add cover image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       .bg-image {
         /* The image used */
-        background-image: url("static/todo.jpg");
+        background-image: url("static/cover.jpg");
 
         /* Center and scale the image nicely */
         background-position: center;
@@ -61,15 +61,6 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#photos">Photos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#activities">What to do</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#location">Where to Stay</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#other">Anything Else</a>
             </li>
           </ul>
         </div>
