update tldr section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,17 @@
               Accomodations: <a href="">Airbnb Link</a>,  14br/12ba duplex, 42 beds
             </p>
             <p>
-              Things to do: It's on a lake, and there's a nice town nearby.
+              Food: The cost per person includes some extra that we'll use to get breakfast/lunch foods and snacks. See the cost breakdown for details
+            </p>
+            <p>
+              Things to do: It's on a lake, and there's a nice downtown within walking distance.
+            </p>
+            <p>
+              What to bring:
+                <ul>
+                  <li>Towel</li>
+                  <li>Bed Sheets</li>
+                <ul>
             </p>
           </div>
         </div>
