--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     </header>
 
     <main role="main">
-      <div class="bg-image"></div>
+      <div class="container" style="margin-top: 20px; max-width: 650px;">
+        <div class="bg-image"></div>
+      </div>
 
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
