add more content

--- a/index.html
+++ b/index.html
@@ -116,6 +116,104 @@
 
         <hr class="divider">
 
+        <div id="accomodations" class="row">
+          <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">Accomodations</h1>
+          </div>
+          <div style="width: 100%">
+            <p>
+              We will be staying at
+                <a
+                  href="https://www.airbnb.com/rooms/27762874?adults=16&check_in=2020-07-17&check_out=2020-07-20&source_impression_id=p3_1566645675_Yz12C87LdjFr0r%2FE"
+                >
+                  this
+                </a>
+              lovely house on Lake Harmony!
+              It has 14 bedrooms and 12 baths and sleeps 42 so there should
+              be more than enough room for all of us!  There are two full
+              kitchens, three decks, and two small docks!
+            </p>
+            <p>
+              The ten single bedrooms will be offered to the parental units
+              first and any leftovers will be on a first come first serve
+              basis. The remaining four bedrooms have four bunk beds, we
+              can set up a chart for accomodations.
+            </p>
+            <p>
+              Because it is such a large house, they ask that we provide our
+              own linens, so please bring a set of sheets and towels :)
+            </p>
+          </div>
+        </div>
+
+        <hr class="divider">
+
+        <div id="thingtodo" class="row">
+          <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">Things To Do</h1>
+          </div>
+          <div style="width: 100%">
+            Do some googling for:
+            <ul>
+                <li>
+                    Poconos Raceway
+                </li>
+                <li>
+                    Split Rock Resort - yeti watersports
+                </li>
+                <li>
+                    Hiking and Nature Trails
+                </li>
+                <li>
+                    Lake Harmony
+                </li>
+                <li>
+                    Escape room ~30 min away
+                </li>
+                <li>
+                    Bear Mountain Butterfly Sanctuary
+                </li>
+                <li>
+                    Blue Lightning
+                </li>
+                <li>
+                    Old Jail Museum
+                </li>
+            <ul>
+          </div>
+        </div>
+
+        <hr class="divider">
+
+        <div id="thingtodo" class="row">
+          <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">Things To Do</h1>
+          </div>
+          <div style="width: 100%">
+            <p>
+                Because of Grandpa’s generous help with planning this reunion,
+                the cost that we need to cover is about 5k. This amount
+                covers the remainder of the house and also a food budget.
+                Alec and I will be purchasing food for the house with the
+                remaining funds. We plan to buy enough food at at least cover
+                breakfast and lunch for everyone for each day. Depending on
+                how far the funds stretch we hope to cover dinner as well and
+                maybe some drinks :)
+            </p>
+            <p>
+                Costs for the reunion will obviously fluctuate with the number
+                of people who actually plan on attending.  For 35 people, the
+                cost is only $150 per person for four days and three nights.
+            </p>
+            <p>
+                If fewer than 20 people choose to attend we can rent half the
+                house and keep costs about the same.
+            </p>
+          </div>
+        </div>
+
+        <hr class="divider">
+
         <div id="photos" class="row">
           <div style="width: 100%">
             <h1 class="text-center" style="width: 100%">Photos</h1>
