add more content

--- a/index.html
+++ b/index.html
@@ -93,22 +93,35 @@
               </a>
             </p>
             <p>
-              Cost: $145 per person, for 4 days/3 nights; Please thank Grandpa for making this affordable!
+              Cost: $150 per person, for 4 days/3 nights; Please thank Grandpa
+              for making this affordable!
             </p>
             <p>
-              Accomodations: <a href="">Airbnb Link</a>,  14br/12ba duplex, 42 beds
+              Accomodations:
+                <a href="https://www.airbnb.com/rooms/27762874?adults=16&check_in=2020-07-17&check_out=2020-07-20&source_impression_id=p3_1566645675_Yz12C87LdjFr0r%2FE">
+                    Airbnb Link,
+                </a>
+                14br/12ba duplex, 42 beds
             </p>
             <p>
-              Food: The cost per person includes some extra that we'll use to get breakfast/lunch foods and snacks. See the cost breakdown for details
+              Food: The cost per person includes some extra that we'll use to
+              get breakfast/lunch foods and snacks. See the cost breakdown for
+              details
             </p>
             <p>
-              Things to do: It's on a lake, and there's a nice downtown within walking distance.
+              Things to do: It's on a lake, and there's a nice downtown within
+              walking distance.
             </p>
             <p>
               What to bring:
                 <ul>
                   <li>Towel</li>
                   <li>Bed Sheets</li>
+                  <li>Your Best Self</li>
+                  <li>Bathingsuit</li>
+                  <li>Hiking Boots</li>
+                  <li>Board Games</li>
+                  <li>Booze</li>
                 <ul>
             </p>
           </div>
@@ -187,7 +200,7 @@
 
         <div id="thingtodo" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">Things To Do</h1>
+            <h1 class="text-center" style="width: 100%">Cost Breakdown</h1>
           </div>
           <div style="width: 100%">
             <p>
@@ -195,10 +208,9 @@
                 the cost that we need to cover is about 5k. This amount
                 covers the remainder of the house and also a food budget.
                 Alec and I will be purchasing food for the house with the
-                remaining funds. We plan to buy enough food at at least cover
-                breakfast and lunch for everyone for each day. Depending on
-                how far the funds stretch we hope to cover dinner as well and
-                maybe some drinks :)
+                remaining funds. We plan to buy enough food to at least cover
+                breakfast and lunch for everyone for each day. We're also
+                hoping to get shirts!
             </p>
             <p>
                 Costs for the reunion will obviously fluctuate with the number
@@ -207,7 +219,8 @@
             </p>
             <p>
                 If fewer than 20 people choose to attend we can rent half the
-                house and keep costs about the same.
+                house and keep costs about the same. Please just let us know
+                ahead of time so we can plan accordingly!
             </p>
           </div>
         </div>
