add more content

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 class="btn btn-primary btn-md"
                 role="button"
                 style="margin-left: 5px"
-                href="https://maps.goole.com/TODO"
+                href="https://goo.gl/maps/BwCzbmh2bGr2n5Fk7"
               >
                 Directions
               </a>
@@ -118,10 +118,11 @@
                   <li>Towel</li>
                   <li>Bed Sheets</li>
                   <li>Your Best Self</li>
-                  <li>Bathingsuit</li>
+                  <li>Bathing Suit</li>
                   <li>Hiking Boots</li>
                   <li>Board Games</li>
                   <li>Booze</li>
+                  <li>Watersport equipment (innertubes, kayaks, etc)</li>
                 <ul>
             </p>
           </div>
@@ -156,6 +157,7 @@
               Because it is such a large house, they ask that we provide our
               own linens, so please bring a set of sheets and towels :)
             </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.655367742263!2d-75.60406820264377!3d41.05994575082342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c4f8d76e29dd37%3A0x5b8c48bbb08f44c8!2sLake%20Harmony%2C%20PA%2018624!5e0!3m2!1sen!2sus!4v1571089897083!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
 
