--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 Alec and I will be purchasing food for the house with the
                 remaining funds. We plan to buy enough food to at least cover
                 breakfast and lunch for everyone for each day. We're also
-                hoping to get shirts!
+                planning to get reunion T-shirts!
             </p>
             <p>
                 Costs for the reunion will obviously fluctuate with the number
