--- a/index.html
+++ b/index.html
@@ -119,6 +119,32 @@
                   <li>Watersport equipment (innertubes, kayaks, etc)</li>
                 <ul>
             </p>
+            <p>Please Please RSVP whether or not you're coming (see below)<p/>
+          </div>
+        </div>
+
+        <hr class="divider">
+
+        <div id="rsvp" class="row">
+          <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">RSVP</h1>
+          </div>
+          <div style="width: 100%">
+            <p>
+              Please email us at <a>lana@rosenbaum.io</a> with the following info:
+            </p>
+            <ul>
+                <li>If you're coming</li>
+                <li>What your shirt size is</li>
+                <li>
+                    For the younger generation: how strong of a preference you
+                    have for a single bedroom, and who you'd want to bunk with
+                    if all single rooms are taken
+                <li>
+            </ul>
+            <p>
+                My venmo handle is @Lana-Malia
+            </p>
           </div>
         </div>
 
