--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
                 <li>If you're coming</li>
                 <li>What your shirt size is</li>
                 <li>
-                    For the younger generation: how strong of a preference you
-                    have for a single bedroom, and who you'd want to bunk with
-                    if all single rooms are taken
+                    If you have kids (adult or otherwise) you get first
+                    preference at single rooms.  For everyone else, please
+                    send us preferences for who you'd like to bunk with.
+                    There's more details on room setups in the accomodations
+                    sections/airbnb page.
                 </li>
             </ul>
             <p>
