--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div style="width: 100%">
             <p>
-              When: July 2020
+              When: July 17th-20th 2020 (est)
             </p>
             <p>
               Location: Lake Harmony
@@ -131,7 +131,8 @@
           </div>
           <div style="width: 100%">
             <p>
-              Please email us at <a>lana@rosenbaum.io</a> with the following info:
+              Please email us at <a>lana@rosenbaum.io</a> by
+              <strong>Oct 31st</strong> with the following info:
             </p>
             <ul>
                 <li>If you're coming</li>
@@ -142,6 +143,11 @@
                     send us preferences for who you'd like to bunk with.
                     There's more details on room setups in the accomodations
                     sections/airbnb page.
+                </li>
+                <li>
+                    If these dates <i>really</i> don't work for you, please
+                    mention it. If it doesn't work for enough people, we'll
+                    have to pick a different date.
                 </li>
             </ul>
             <p>
