dates are confirmed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div style="width: 100%">
             <p>
-              When: July 17th-20th 2020 (est)
+              When: July 17th-20th 2020
             </p>
             <p>
               Location: Lake Harmony
