remove passed date deadline

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
           </div>
           <div style="width: 100%">
             <p>
-              Please email us at <a>lana@rosenbaum.io</a> by
-              <strong>Oct 31st</strong> with the following info:
+              Please email us at <a>lana@rosenbaum.io</a> by with the following
+              info:
             </p>
             <ul>
                 <li>If you're coming</li>
