--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
           <div style="width: 100%">
             <p>
-              Please email us at <a>lana@rosenbaum.io</a> by with the following
+              Please email us at <a>lana@rosenbaum.io</a> with the following
               info:
             </p>
             <ul>
