add more detailed cost breakdown

--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
               Because it is such a large house, they ask that we provide our
               own linens, so please bring a set of sheets and towels :)
             </p>
+            <p>
+              There's ample parking, but only 9 spots actually in front of the
+              house. There's a small lot about a mile away we can also store
+              cars at, but we'd need to coordinate trips back and forth unless
+              you're fine with walking.
+            </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.655367742263!2d-75.60406820264377!3d41.05994575082342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c4f8d76e29dd37%3A0x5b8c48bbb08f44c8!2sLake%20Harmony%2C%20PA%2018624!5e0!3m2!1sen!2sus!4v1571089897083!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
         </div>
@@ -279,11 +285,51 @@
                 of people who actually plan on attending.  For 35 people, the
                 cost is only $150 per person for four days and three nights.
             </p>
-            <p>
-                If fewer than 20 people choose to attend we can rent half the
-                house and keep costs about the same. Please just let us know
-                ahead of time so we can plan accordingly!
-            </p>
+          </div>
+          <div style="width: 100%">
+              <h3>Costs</h3>
+              <ul>
+                <li>AirBnb - $11,899.38 ($3,400/night x 3 nights + cleaning/service/occupancy fees + taxes)</li>
+                <li>Shirts - $500 (est, $12/person * 40 people)</li>
+                <li>Food + consumables - $2500 (est)</li>
+              </ul>
+              <p>
+                That totals around $15k. Grandpa covered 10k of that for us. The
+                remaining 5k is being split among the adults attending.
+                $5k/35 = $142, which we've rounded up to $150 to give us a
+                buffer.
+              </p>
+              <p>
+                The plan with respect to food is still a little bit up in the
+                the air, at least in that we don't have grocery lists to share
+                (yet). The current budget allots ~$70 per person for the whole
+                trip, which ends up being around ~$15-20/person/day.
+              </p>
+              <p>
+                The current plan is to go to costco on the way up, and buy a
+                lot of food/drink that should sustain us the entire trip. We
+                expect that this will cover breakfast/lunch/snacks + at least
+                one dinner. Hopefully that would cover all food, but we haven't
+                created an itemized costco shopping list yet so we can't say
+                for certain.
+              <p>
+              </p>
+                A few people have mentioned trying to get one night catered,
+                which would likely impact what we eat for other meals, but
+                would be really nice for those of us who will be cooking
+                and cleaning the rest of the time. That being said, we
+                haven't done any significant research into it yet and have
+                no idea what our options would be or how much it would cost. If
+                it turns out that we significantly overbudgeted for food, we'll
+                individually return the difference. Otherwise, we'll plan on
+                edging on the side of overbuying and everyone will have the
+                option to take the remaining food home with them.
+              </p>
+              <p>
+                Also, $2500 of food isn't going to fit into our tiny hatchback, so
+                we will be creating an itemized grocery list and asking for help
+                in buying/transporting food/drink.
+              </p>
           </div>
         </div>
 
