add coronavirus update

--- a/index.html
+++ b/index.html
@@ -69,6 +69,52 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">UPDATE -- June 6</h1>
+          </div>
+          <div style="width: 100%">
+            <p>
+				Hello everyone!
+            </p>
+            <p>
+				As the date of the reunion grows closer, it has become clear
+				that holding the reunion this year would present some
+				unnecessary risk and would not adhere to current state or
+				federal gathering/travel guidelines. We don’t want fear of
+				coronavirus infection to influence anyone’s decision to see
+				their family, and will plan on postponing the reunion if at all
+				possible.
+            </p>
+            <p>
+				The current plan is to first contact the owner of the airbnb
+				and hope that they will be understanding about moving
+				reservation to a similar weekend next year. If that doesn’t
+				work, airbnb itself has a complete refund cancellation policy
+				which they have slowly been extending.  Currently they will
+				refund anything booked before July 15th. We think that given
+				a little more time they will extend this policy to cover our
+				dates as well. We will then book something for a similar
+				weekend next year.
+            </p>
+            <p>
+				The plan would be for everything (sans date) to be the same.
+				If anyone has already given us money to cover the reunion and
+				would like it back just let us know.
+            </p>
+            <p>
+				If anyone has questions or concerns about the current plan or
+				about the dates next year please let us know. I can be reached
+				at lana@rosenbaum.io
+            </p>
+            <p>
+				Thank You and Stay Safe!
+            </p>
+          </div>
+        </div>
+
+        <hr class="divider">
+
+        <div id="tldr" class="row">
+          <div style="width: 100%">
             <h1 class="text-center" style="width: 100%">TL;DR</h1>
           </div>
           <div style="width: 100%">
