postponed update -- june 14th

--- a/index.html
+++ b/index.html
@@ -69,9 +69,46 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">UPDATE -- June 6</h1>
+            <h1 class="text-center" style="width: 100%">UPDATE -- June 14 2020</h1>
           </div>
           <div style="width: 100%">
+            <p>
+				Hello!
+            </p>
+            <p>
+				We've switched the reservation to July 9 - 12th, 2021.
+				Cost and other details will remain the same, please contact us
+				with any questions or concerns.
+            </p>
+            <p>
+				Thank You and Stay Safe!
+            </p>
+            <p>
+				Lana Rosenbaum, lana@rosenbaum.io
+            </p>
+          </div>
+        </div>
+
+        <hr class="divider">
+      <div class="container" style="margin-top: 20px; max-width: 650px;">
+        <div class="row">
+          <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">
+				UPDATE -- June 6 2020
+		        <a
+		          class="btn btn-primary"
+		          data-toggle="collapse"
+		          href="#old-update-june-six"
+		          role="button"
+		          aria-expanded="false"
+		          aria-controls="old-update-june-six"
+		          style="margin-bottom: 5px;"
+		        >
+		        	Show
+		        </a>
+			</h1>
+          </div>
+          <div id="old-update-june-six" style="width: 100%" class="collapse">
             <p>
 				Hello everyone!
             </p>
@@ -119,7 +156,7 @@
           </div>
           <div style="width: 100%">
             <p>
-              When: July 17th-20th 2020
+              When: July 9th-12th 2021
             </p>
             <p>
               Location: Lake Harmony
