--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">The O'Neill Famile Reunion 2020</a>
+        <a class="navbar-brand" href="#">The O'Neill Family Reunion 2020</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
