add notes from organization call

--- a/index.html
+++ b/index.html
@@ -69,6 +69,67 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
+            <h1 class="text-center" style="width: 100%">UPDATE -- March 21 2021</h1>
+          </div>
+          <div style="width: 100%">
+            <p>
+				Hello!
+            </p>
+            TODO
+            * re send out website, ask for re-rsvp
+			* figure out food, catering?
+			* put parking information up on the website
+			* we want to make sure everyone is safe. If you've been vaccinated please let us know, otherwise if there's not a majority we'll have to wear masks.
+			* paper plates / plastic cups / plastic utencils
+			* disposable aluminium tins
+			* aluminum foil, plastic wrap
+			* ziplock bags
+			* basic kitchen stuff (one knife, cutting board, spatula, tongs, etc)
+			* trash bags
+			* paper towels
+			* soap + shampoo
+			* toilet paper
+			* stapes: milk, cereal, eggs, burgers, hot dogs, saussages, bread, soda
+			* If you have a food allergies please let us know. Otherwise if you'd like to opt out of meals please ping us and we can the food portion in half (drinks, soap, plates, etc would still be included).
+			* bring coolers/etc for drinks. Fridge/freezer space might be tight?
+			* reminder to bring bedding
+			* BBQ stuff?
+			* starter logs for fire pit (not fire wood, just starter logs)
+			* bug lantern / candle / bug spray
+			* sunscreen
+			* benadryl, advil, tylenol, bandaids, neosporin
+			* bring your own games and outdoor stuff. There's probably a rental place, but don't expect anything extra at the house
+			* how many cars can fit in the extra lot?
+            <p>
+			    The Reservation is still <strong>July 9 - 12th, 2021.</strong>
+            </p>
+            <p>
+				The price per night has dropped on the listing, so we will be
+				contacting the owner and seeing if we can lower the cost.
+            </p>
+            <p>
+				We'd like everyone to re-confirm their RSVP if possible. Send
+				us an email at lana@rosenbaum.io
+            </p>
+            <p>
+				We contacted the hosts to see what their policy is on pets.
+				They do <strong>not</strong> allow pets.
+            </p>
+            <p>
+				Reminder to bring sheets, and review the parking details.
+            </p>
+            <p>
+				Thank You and Stay Safe!
+            </p>
+            <p>
+				Lana Rosenbaum, lana@rosenbaum.io
+            </p>
+          </div>
+        </div>
+
+        <hr class="divider">
+        <div id="tldr" class="row">
+          <div style="width: 100%">
             <h1 class="text-center" style="width: 100%">UPDATE -- June 14 2020</h1>
           </div>
           <div style="width: 100%">
