--- a/index.html
+++ b/index.html
@@ -93,20 +93,6 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div class="row">
           <div style="width: 100%">
-             <h1 class="text-center" style="width: 100%">
-        UPDATE -- March 27 2021
-            <a
-              class="btn btn-primary"
-              data-toggle="collapse"
-              href="#update-mar-27"
-              role="button"
-              aria-expanded="false"
-              aria-controls="update-mar-27"
-              style="margin-bottom: 5px;"
-            >
-              Show
-            </a>
-          </h1>
             <h1 class="text-center" style="width: 100%">
 				UPDATE -- June 6 2020
 		        <a
@@ -121,33 +107,6 @@
 		        	Show
 		        </a>
 			</h1>
-      </div>
-          <div id="update-mar-27" style="width: 100%" class="collapse">
-            <p>
-        Hello everyone!
-            </p>
-            <p>
-        The Reunion is currently scheduled for July 9-12, 2021!  We are super exicted to see everyone after this long quanretine.  
-        Because of the changes we are asking that everyone please re-rsvp so that we have a firm count for this year.  If anyone is unable to make it and requires a refund just let me know!  
-            </p>
-            <p>
-        Please note that pets are not allowed at the airbnb, so please plan accordingly.
-            </p>
-            <p>
-              For those of us flying in, the two closest airports are the Wilkes-Barre Scranton International Airport (40 min away) and the Philadelphia International Airport (1.5 hrs away).
-            </p>
-            <p>
-            We are hoping that the vaccine will be avaliable to everyone before the reunion takes place, but in order to make sure that the gathering is safe for everyone we need to be aware of covid risk.  If we do not meet a certain threshold within our 'herd' we will need to wear masks, so please let us know once you have recieved the vaccine so that we can communicate any requirements before the reunion date.
-            </p>
-            <p>
-        If anyone has any questions or concerns, I can be reached
-        at lana@rosenbaum.io
-            </p>
-            <p>
-        Thank You and Stay Safe!
-            </p>
-          </div>
-        </div>
           </div>
           <div id="old-update-june-six" style="width: 100%" class="collapse">
             <p>
@@ -251,13 +210,27 @@
 
         <div id="rsvp" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">RE-RSVP</h1>
+            <h1 class="text-center" style="width: 100%">RSVP</h1>
           </div>
           <div style="width: 100%">
             <p>
-              Please re-email us at <a>lana@rosenbaum.io</a> with wether or no you are able to come!
+              Please email us at <a>lana@rosenbaum.io</a> with the following
+              info:
             </p>
-            
+            <ul>
+                <li>If you're coming</li>
+                <li>What your shirt size is</li>
+                <li>
+                    If you have kids (adult or otherwise) you get first
+                    preference at single rooms.  For everyone else, please
+                    send us preferences for who you'd like to bunk with.
+                    There's more details on room setups in the accomodations
+                    sections/airbnb page.
+                </li>
+            </ul>
+            <p>
+                My venmo handle is @Lana-Malia
+            </p>
           </div>
             <style>
                 #accordion .card-header:after {
