--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">The O'Neill Family Reunion 2020</a>
+        <a class="navbar-brand" href="#">The O'Neill Family Reunion 2021</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,9 +69,94 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">UPDATE -- June 14 2020</h1>
+            <h1 class="text-center" style="width: 100%">UPDATE -- March 21 2021</h1>
           </div>
           <div style="width: 100%">
+			<p>
+				Hello everyone!
+            </p>
+            <p>
+				The Reunion is currently scheduled for July 9-12, 2021!  We are
+				super exicted to see everyone after this long quanretine.
+				Because of the changes we are asking that everyone please
+				re-rsvp so that we have a firm count for this year. If anyone
+				is unable to make it and requires a refund just let me know!
+            </p>
+            <p>
+				Please note that pets are not allowed at the airbnb, so please
+				plan accordingly.
+            </p>
+            <p>
+				For those of us flying in, the two closest airports are the
+				Wilkes-Barre Scranton International Airport (40 min away) and
+				the Philadelphia International Airport (1.5 hrs away).
+            </p>
+            <p>
+				We are hoping that the vaccine will be avaliable to everyone
+				before the reunion takes place, but in order to make sure that
+				the gathering is safe for everyone we need to be aware of covid
+				risk.  If we do not meet a certain threshold within our 'herd'
+				we will need to wear masks, so please let us know once you have
+				recieved the vaccine so that we can communicate any
+				requirements before the reunion date.
+            </p>
+            <p>
+				If anyone has any questions or concerns, I can be reached
+				at lana@rosenbaum.io
+            </p>
+            <p>
+				Thank You and Stay Safe!
+            </p>
+
+			<!--
+
+			TODO
+            * re send out website, ask for re-rsvp
+			* figure out food, catering?
+			* put parking information up on the website
+			* we want to make sure everyone is safe. If you've been vaccinated please let us know, otherwise if there's not a majority we'll have to wear masks.
+			* paper plates / plastic cups / plastic utencils
+			* disposable aluminium tins
+			* aluminum foil, plastic wrap
+			* ziplock bags
+			* basic kitchen stuff (one knife, cutting board, spatula, tongs, etc)
+			* trash bags
+			* paper towels
+			* soap + shampoo
+			* toilet paper
+			* stapes: milk, cereal, eggs, burgers, hot dogs, saussages, bread, soda
+			* If you have a food allergies please let us know. Otherwise if you'd like to opt out of meals please ping us and we can the food portion in half (drinks, soap, plates, etc would still be included).
+			* bring coolers/etc for drinks. Fridge/freezer space might be tight?
+			* reminder to bring bedding
+			* BBQ stuff?
+			* starter logs for fire pit (not fire wood, just starter logs)
+			* bug lantern / candle / bug spray
+			* sunscreen
+			* benadryl, advil, tylenol, bandaids, neosporin
+			* bring your own games and outdoor stuff. There's probably a rental place, but don't expect anything extra at the house
+			* how many cars can fit in the extra lot?
+			--!>
+          </div>
+        </div>
+
+        <div id="tldr" class="row">
+          <div style="width: 100%">
+            <h2 class="text-center" style="width: 100%">
+				UPDATE -- June 14 2020
+		        <a
+		          class="btn btn-primary"
+		          data-toggle="collapse"
+		          href="#old-update-june-fourteen"
+		          role="button"
+		          aria-expanded="false"
+		          aria-controls="old-update-june-fourteen"
+		          style="margin-bottom: 5px;"
+		        >
+		        	Show
+		        </a>
+			</h2>
+          </div>
+          <div id="old-update-june-fourteen" style="width: 100%" class="collapse">
             <p>
 				Hello!
             </p>
@@ -89,11 +174,10 @@
           </div>
         </div>
 
-        <hr class="divider">
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">
+            <h2 class="text-center" style="width: 100%">
 				UPDATE -- June 6 2020
 		        <a
 		          class="btn btn-primary"
@@ -106,7 +190,7 @@
 		        >
 		        	Show
 		        </a>
-			</h1>
+			</h2>
           </div>
           <div id="old-update-june-six" style="width: 100%" class="collapse">
             <p>
@@ -210,24 +294,13 @@
 
         <div id="rsvp" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">RSVP</h1>
+            <h1 class="text-center" style="width: 100%">RE-RSVP</h1>
           </div>
           <div style="width: 100%">
             <p>
-              Please email us at <a>lana@rosenbaum.io</a> with the following
-              info:
+              Please email us at <a>lana@rosenbaum.io</a> with whether or not
+			  you're able to attend!
             </p>
-            <ul>
-                <li>If you're coming</li>
-                <li>What your shirt size is</li>
-                <li>
-                    If you have kids (adult or otherwise) you get first
-                    preference at single rooms.  For everyone else, please
-                    send us preferences for who you'd like to bunk with.
-                    There's more details on room setups in the accomodations
-                    sections/airbnb page.
-                </li>
-            </ul>
             <p>
                 My venmo handle is @Lana-Malia
             </p>
