update yes RE-RSVPs

--- a/index.html
+++ b/index.html
@@ -328,7 +328,14 @@
                 <a class="card-title">Who's Coming?</a>
               </div>
               <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
-                <p>So far we're gotten YES RSVPs from:<p>
+                <p>We've gotten updated YES RE-RSVP's from:<p>
+                <ul>
+                  <li>Shelia &amp; Bill, Lana &amp; Alec, Rhiannon, Jessy</li>
+                  <li>John &amp; Katelynn, Shane, Lily</li>
+                  <li>Joe O'Neill</li>
+                  <li>Krissy &amp; Tom</li>
+                </ul>
+                <p>Originally we got YES RSVPs from:<p>
                 <ul>
                   <li>Shelia &amp; Bill, Lana &amp; Alec, Rhiannon, Jessy</li>
                   <li>Geine &amp; Bill, Shannon, Mikey, Andy &amp; Michelle</li>
