add collers to the list of stuff to bring

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                 <ul>
                   <li>Towel</li>
                   <li>Bed Sheets</li>
+                  <li>Coolers (expect fridge space to be limited)</li>
                   <li>Your Best Self</li>
                   <li>Bathing Suit</li>
                   <li>Hiking Boots</li>
