added may update

--- a/index.html
+++ b/index.html
@@ -69,6 +69,45 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
+            <h2 class="text-center" style="width: 100%">
+        UPDATE -- MAY 22, 2021
+            <a
+              class="btn btn-primary"
+              data-toggle="collapse"
+              href="#update-may-twentytwo"
+              role="button"
+              aria-expanded="false"
+              aria-controls="update-may-twentytwo"
+              style="margin-bottom: 5px;"
+            >
+              Show
+            </a>
+      </h2>
+          </div>
+          <div id="update-may-twentytwo" style="width: 100%" class="collapse">
+            <p>
+        Hello again!
+            </p>
+            <p>
+              We've spent the last few weeks reaching out collecting re-rsvps and now have a relatively firm count for the reunion in a little over a month!  
+              It looks like we are set to have 38 family members coming with a few maybes as well.  By and large our group will be vaccinated with a few exceptions. 
+              We ask that everyone try to follow the CDC guidelines for our gathering.  If people have any questions or concerns please reach out!
+            </p>
+            <p>
+            I can't wait to see all of you in only a few short weeks!  Please keep an eye on this page for updates as the date grows closes especially concerning parking and menus!
+            </p>
+            <p>
+              Thank you,
+            </p>
+            <p>
+        Lana Rosenbaum, lana@rosenbaum.io
+            </p>
+          </div>
+        </div>
+
+
+        <div id="tldr" class="row">
+          <div style="width: 100%">
             <h1 class="text-center" style="width: 100%">UPDATE -- March 21 2021</h1>
           </div>
           <div style="width: 100%">
@@ -134,8 +173,9 @@
 			* sunscreen
 			* benadryl, advil, tylenol, bandaids, neosporin
 			* bring your own games and outdoor stuff. There's probably a rental place, but don't expect anything extra at the house
-			* how many cars can fit in the extra lot?
-			--!>
+			* how many cars can fit in the extra lot? 
+      -->
+
           </div>
         </div>
 
@@ -331,10 +371,13 @@
               <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
                 <p>We've gotten updated YES RE-RSVP's from:<p>
                 <ul>
-                  <li>Shelia &amp; Bill, Lana &amp; Alec, Rhiannon, Jessy</li>
+                  <li>Shelia &amp; Bill, Lana &amp; Alec, Rhiannon, Jessy, Trisha</li>
                   <li>John &amp; Katelynn, Shane, Lily</li>
-                  <li>Joe O'Neill</li>
-                  <li>Krissy &amp; Tom</li>
+                  <li>Joe, Jim, Ellen, Ryu, Ariana</li>
+                  <li>Krissy, Tom, Joan, Brian, Kassie, Lyla, Kaitlyn, Mike</li>
+                  <li>Megan, Jacob, Nick</li>
+                  <li>Drew, Anite, Devin, Victor</li>
+                  <li>Geine, Bill, Andy, Michelle, Mike, Raina, Shannon</li>
                 </ul>
                 <p>Originally we got YES RSVPs from:<p>
                 <ul>
