fixed the collapses, changed spelling

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </a>
       </h2>
           </div>
-          <div id="update-may-twentytwo" style="width: 100%" class="collapse">
+          <div id="update-may-twentytwo" style="width: 100%">
             <p>
         Hello again!
             </p>
@@ -94,7 +94,7 @@
               We ask that everyone try to follow the CDC guidelines for our gathering.  If people have any questions or concerns please reach out!
             </p>
             <p>
-            I can't wait to see all of you in only a few short weeks!  Please keep an eye on this page for updates as the date grows closes especially concerning parking and menus!
+            I can't wait to see all of you in only a few short weeks!  Please keep an eye on this page for updates as the date grows closer especially concerning parking and menus!
             </p>
             <p>
               Thank you,
@@ -108,7 +108,7 @@
 
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100%">UPDATE -- March 21 2021</h1>
+            <h1 class="text-center" style="width: 100% class="collapse"">UPDATE -- March 21 2021</h1>
           </div>
           <div style="width: 100%">
 			<p>
