--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h2 class="text-center" style="width: 100%">
-        UPDATE -- MAY 22, 2021
-            <a
-              class="btn btn-primary"
-              data-toggle="collapse"
-              href="#update-may-twentytwo"
-              role="button"
-              aria-expanded="false"
-              aria-controls="update-may-twentytwo"
-              style="margin-bottom: 5px;"
-            >
-              Show
-            </a>
-      </h2>
+            <h1 class="text-center" style="width: 100%">
+			  UPDATE -- MAY 22, 2021
+			  <a
+			    class="btn btn-primary"
+			    data-toggle="collapse"
+			    href="#update-may-twentytwo"
+			    role="button"
+			    aria-expanded="true"
+			    aria-controls="update-may-twentytwo"
+			    style="margin-bottom: 5px;"
+			  >
+			    Hide
+			  </a>
+			</h1>
           </div>
-          <div id="update-may-twentytwo" style="width: 100%">
+          <div id="update-may-twentytwo" style="width: 100%" class="collapse show">
             <p>
         Hello again!
             </p>
             <p>
-              We've spent the last few weeks reaching out collecting re-rsvps and now have a relatively firm count for the reunion in a little over a month!  
-              It looks like we are set to have 38 family members coming with a few maybes as well.  By and large our group will be vaccinated with a few exceptions. 
+              We've spent the last few weeks reaching out collecting re-rsvps and now have a relatively firm count for the reunion in a little over a month!
+              It looks like we are set to have 38 family members coming with a few maybes as well.  By and large our group will be vaccinated with a few exceptions.
               We ask that everyone try to follow the CDC guidelines for our gathering.  If people have any questions or concerns please reach out!
             </p>
             <p>
@@ -108,9 +108,22 @@
 
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100% class="collapse"">UPDATE -- March 21 2021</h1>
+            <h2 class="text-center" style="width: 100% class="collapse"">
+		      UPDATE -- March 21 2021
+			  <a
+			    class="btn btn-primary"
+			    data-toggle="collapse"
+			    href="#update-may-twentyone"
+			    role="button"
+			    aria-expanded="false"
+			    aria-controls="update-may-twentyone"
+			    style="margin-bottom: 5px;"
+			  >
+			    Show
+			  </a>
+			</h2>
           </div>
-          <div style="width: 100%">
+          <div id="update-may-twentyone" style="width: 100%" class="collapse">
 			<p>
 				Hello everyone!
             </p>
@@ -173,7 +186,7 @@
 			* sunscreen
 			* benadryl, advil, tylenol, bandaids, neosporin
 			* bring your own games and outdoor stuff. There's probably a rental place, but don't expect anything extra at the house
-			* how many cars can fit in the extra lot? 
+			* how many cars can fit in the extra lot?
       -->
 
           </div>
