--- a/index.html
+++ b/index.html
@@ -69,20 +69,9 @@
       <div class="container" style="margin-top: 20px; max-width: 650px;">
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h2 class="text-center" style="width: 100%">
+            <h1 class="text-center" style="width: 100%">
         UPDATE -- MAY 22, 2021
-            <a
-              class="btn btn-primary"
-              data-toggle="collapse"
-              href="#update-may-twentytwo"
-              role="button"
-              aria-expanded="false"
-              aria-controls="update-may-twentytwo"
-              style="margin-bottom: 5px;"
-            >
-              Show
-            </a>
-      </h2>
+      </h1>
           </div>
           <div id="update-may-twentytwo" style="width: 100%">
             <p>
@@ -108,9 +97,20 @@
 
         <div id="tldr" class="row">
           <div style="width: 100%">
-            <h1 class="text-center" style="width: 100% class="collapse"">UPDATE -- March 21 2021</h1>
+            <h2 class="text-center" style="width: 100%">UPDATE -- March 21 2021
+            <a
+              class="btn btn-primary"
+              data-toggle="collapse"
+              href="#old-update-march-twentyone"
+              role="button"
+              aria-expanded="false"
+              aria-controls="old-update-march-twentyone"
+              style="margin-bottom: 5px;"
+            >
+              Show
+            </a></h2>
           </div>
-          <div style="width: 100%">
+          <div id="old-update-march-twentyone" style="width: 100%" class="collapse">
 			<p>
 				Hello everyone!
             </p>
