july 5 update.... comitted july 6th (oops)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,67 @@
         <div id="tldr" class="row">
           <div style="width: 100%">
             <h1 class="text-center" style="width: 100%">
+			  UPDATE -- July 5, 2021
+			  <a
+			    class="btn btn-primary"
+			    data-toggle="collapse"
+			    href="#update-july-five"
+			    role="button"
+			    aria-expanded="true"
+			    aria-controls="update-july-five"
+			    style="margin-bottom: 5px;"
+			  >
+			    Hide
+			  </a>
+			</h1>
+          </div>
+          <div id="update-july-five" style="width: 100%" class="collapse show">
+            <p>
+        Hello!
+            </p>
+			<!--
+				* reminder for "to bring"
+				  * suggest chairs
+				*
+			-->
+            <p>
+				The reunion is near, and we've got a few reminders and some
+				more details to share.
+            </p>
+            <p>
+				<strong>Check in:</strong> Friday at 4PM
+				<br>
+				<strong>Check out:</strong> Monday at 10AM
+            </p>
+            <p>
+				<strong>Address</strong> 188 and 190 South Lake Drive, Lake Harmony, 16824
+				<br>
+				(both halves of a duplex)
+			    Maps link: <a href="https://goo.gl/maps/aNVvfne41m3yXQaA7">https://goo.gl/maps/aNVvfne41m3yXQaA7</a>
+            </p>
+            <p>
+			    <strong>Parking</strong> is available at the duplex for 9 cars.
+				After that, we'll have to park in the overflow lot, which is
+				about 1.5mi away. If we have 9 cars at the house, someone will
+				be around to ferry back and forth as needed.
+				<a href="#parking-directions">More details available below.</a>
+            </p>
+            <p>
+				<strong>You should bring:</strong> sheets, folding chairs, swimsuits.
+				See the <a href="#what-to-bring">full list below.</a>
+            </p>
+            <p>
+              Thank you,
+            </p>
+            <p>
+        Lana Rosenbaum, lana@rosenbaum.io
+            </p>
+          </div>
+        </div>
+
+        <div id="tldr" class="row">
+          <div style="width: 100%">
+            <h2 class="text-center" style="width: 100%">
 			  UPDATE -- MAY 22, 2021
 			  <a
 			    class="btn btn-primary"
@@ -80,11 +141,11 @@
 			    aria-controls="update-may-twentytwo"
 			    style="margin-bottom: 5px;"
 			  >
-			    Hide
+			    Show
 			  </a>
-			</h1>
+			</h2>
           </div>
-          <div id="update-may-twentytwo" style="width: 100%" class="collapse show">
+          <div id="update-may-twentytwo" style="width: 100%" class="collapse">
             <p>
         Hello again!
             </p>
@@ -326,7 +387,7 @@
               Things to do: It's on a lake, and there's a nice downtown within
               walking distance.
             </p>
-            <p>
+            <p id="what-to-bring">
               What to bring:
                 <ul>
                   <li>Towel</li>
@@ -338,6 +399,7 @@
                   <li>Board Games</li>
                   <li>Booze</li>
                   <li>Watersport equipment (innertubes, kayaks, etc)</li>
+                  <li>Folding Chairs</li>
                 <ul>
             </p>
             <p>Please Please RSVP whether or not you're coming (see below)<p/>
@@ -444,6 +506,40 @@
               you're fine with walking.
             </p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.655367742263!2d-75.60406820264377!3d41.05994575082342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c4f8d76e29dd37%3A0x5b8c48bbb08f44c8!2sLake%20Harmony%2C%20PA%2018624!5e0!3m2!1sen!2sus!4v1571089897083!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			<p id="parking-directions"><strong>Parking directions from the owner:</strong>
+				<pre>
+There is parking for 9 cars on the Eagle’s Nest site. This is 6
+cars in the driveway in front of the house, and 3 cars across the
+street in a “cut out” made for parking on the wooded lot.
+
+If additional parking is needed please see the directions to the
+alternate parking location.
+
+You may not park in the street.
+
+You may not park on the neighbor’s property or block the
+neighbor’s driveway. Even if it looks like the neighbor is not
+at home, you may not park on the neighbor’s property.
+
+YOU WILL BE TOWED
+
+Thank you for your kind attention to this matter.
+
+Directions to Additional Parking 1.5Miles
+
+Go out the driveway and turn left.
+Head East on S. Lake drive go past Nick’s Restaurant.
+Go slight right through the stop sign.
+Go past Shenanigans, past Louise’s Prime.
+Make a left onto Lipuma Dr.
+Lipuma is directly across from the entrance to Big Boulder.
+Lipuma is also the entrance to the Harmony Ridge Townhouse Community.
+Go past the old guardhouse make an immediate right into the parking area.
+This is the entrance to a ware house parking lot.
+There is a tan warehouse on the property.
+You can park in this lot along the tree line.
+				</pre>
+			</p>
           </div>
         </div>
 
