update photos link

--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ You can park in this lot along the tree line.
               <a
                 class="btn btn-primary btn-md"
                 role="button"
-                href="https://photos.app.goo.gl/TODO"
+                href="https://photos.app.goo.gl/oeCvaChYKcwAg1wU8"
               >
                 Photos
               </a>
